resources/stylesheets/component/tablet/pageheader.page-edit.less
.bs-page-edit {
	width: 100%;
	max-width: 100%;

	& > ul {
		display: flex;
		flex-wrap: nowrap;
		justify-content: flex-start;

		& > li {
			margin: 0;
			margin-bottom: 0.625rem;
		}
	}

	.bs-page-edit-elements {
		width: 100vw;
	}

	.bs-page-edit-element-text-col {
		width: 90%;
		line-height: 1.1rem;
	}

	.bs-page-last-edit {
		display: block;
		max-width: 90%;
		margin-left: 0;
		line-height: 1.1rem;
	}

	.icon-info::before {
		margin-left: 0;
		line-height: 1.1rem;
	}


	.bs-page-watch {
		display: block;
		margin-right: 0.5rem;
		line-height: 1rem;
	}
}

